--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,13 @@
 
 <button pButton  
         (click)="mostrarNombre()"
-        label="Cambiar Nombre">
+        label="Cambiar Nombre"
+        class="p-button-help"
+        icon="pi pi-bell" 
+        iconPos="right">   
 </button>
+
+<p-card [header]="nombre | titlecase"
+        subheader="Esto es un subheader">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
+</p-card>
