--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -1,1 +1,19 @@
-<p>basicos works!</p>
+
+<h1>Pipes Básicos</h1>
+<p>
+    Pipes incluídos en Angular - Usualmente en el Common Module
+</p>
+
+<div class="grid">
+    <div class="col-4">
+       <p-card header="uppercase">
+
+       </p-card>
+    </div>
+    <div class="col-4">
+        1
+     </div>
+     <div class="col-4">
+        1
+     </div>
+</div>
