--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -6,14 +6,21 @@
 
 <div class="grid">
     <div class="col-4">
-       <p-card header="uppercase">
-
+       <p-card header="uppercase"
+               [subheader]="nombreLower | uppercase">
+               {{ nombreLower | uppercase }}
        </p-card>
     </div>
     <div class="col-4">
-        1
+        <p-card header="lowercase"
+               [subheader]="nombreUpper | lowercase">
+               {{ nombreUpper | lowercase }}
+       </p-card>
      </div>
      <div class="col-4">
-        1
+        <p-card header="titleCase"
+               [subheader]="nombreCompleto | titlecase">
+               {{ nombreCompleto | titlecase }}
+       </p-card>
      </div>
 </div>
