--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -24,3 +24,38 @@
        </p-card>
      </div>
 </div>
+
+<h1>Date | Fecha | Pipe</h1>
+<p>
+    Pipes para mostrar las fechas.
+</p>
+
+<div class="grid">
+
+    <div class="col-6">
+       <p-card >
+          <ul>
+              <li>fecha</li>
+              <li>fecha | date </li>
+              <li>fecha | date:'short' </li>
+              <li>fecha | date:'long' </li>
+              <li>fecha | date:'EEEE dd, MMM yyyy' </li>
+              <li>fecha | date:'MMMM dd, yyyy' </li>
+          </ul>
+       </p-card>
+    </div>
+
+    <div class="col-6">
+        <p-card >
+            <ul>
+                <li>{{ fecha }}</li>
+                <li>{{ fecha | date }}</li>
+                <li>{{ fecha | date:'short' }}</li>
+                <li>{{ fecha | date:'long' }}</li>
+                <li>{{ fecha | date:'EEEE dd, MMM yyyy' }}</li>
+                <li>{{ fecha | date:'MMMM dd, yyyy' }}</li>
+            </ul>
+        </p-card>
+     </div>
+
+</div>
