--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -42,6 +42,14 @@
               <li>fecha | date:'EEEE dd, MMM yyyy' </li>
               <li>fecha | date:'MMMM dd, yyyy' </li>
           </ul>
+
+          <hr>
+          <ul>
+              <li>fecha | date:'long':'GMT-6':'es-CL'</li>
+              <li>fecha | date:'long':'GMT-4'</li>
+              <li>fecha | date:'long':'':'en'</li>
+              <li>fecha | date:'long':'':'fr'</li>
+          </ul>
        </p-card>
     </div>
 
@@ -54,6 +62,13 @@
                 <li>{{ fecha | date:'long' }}</li>
                 <li>{{ fecha | date:'EEEE dd, MMM yyyy' }}</li>
                 <li>{{ fecha | date:'MMMM dd, yyyy' }}</li>
+            </ul>
+            <hr>
+            <ul>
+                <li>{{ fecha | date:'long':'GMT-6':'es-CL' }} </li>
+                <li>{{ fecha | date:'long':'GMT-4' }} </li>
+                <li>{{ fecha | date:'long':'':'en' }} </li>
+                <li>{{ fecha | date:'long':'':'fr' }} </li>
             </ul>
         </p-card>
      </div>
