--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -1,1 +1,38 @@
-<p>numeros works!</p>
+<h1>DecimalPipes y Porcentaje</h1>
+<p>
+    Pipes incluídos en Angular - Usualmente en el Common Module
+</p>
+
+<div class="grid">
+
+    <div class="col-4">
+        <p-card header="Ventas Netas"
+                subheader="del presente año">
+            <i class="pi pi-dollar"></i>
+            {{ (ventasNetas + 1000000) | number: '1.2-2'}}
+            <br>
+            <i class="pi pi-dollar"></i>
+            {{ ventasNetas | number: '1.0-0'}}
+        </p-card>
+    </div>
+
+    <div class="col-4">
+        <p-card header="Ventas Brutas"
+                subheader="del presente año">
+            {{ (ventasNetas + 2000000) | currency: 'CAD':'symbol-narrow':'1.4-4' }}
+            <br>
+            {{ ventasNetas | currency: 'CL':'symbol':'1.0-0' }}
+        </p-card>
+    </div>
+
+    <div class="col-4">
+        <p-card header="Ganancia Porcentual"
+                subheader="del presente año">
+            {{ porcentaje | percent:'2.2-2' }}
+            <br>
+            {{ porcentaje }}
+        </p-card>
+    </div>
+
+
+</div>
