--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,1 +1,18 @@
-<p>no-comunes works!</p>
+<h1>Pipes no tan comunes</h1>
+<p>
+    Pipes incluídos en Angular - Usualmente en el Common Module
+</p>
+
+<div class="grid">
+
+    <div class="col md-6">
+        <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+    <div class="col md-6">
+        <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+</div>
