--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -7,7 +7,11 @@
 
     <div class="col md-6">
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-            Content
+           
+            Saludos {{ nombre }}, es un placer 
+            {{ genero | i18nSelect: invitacionMapa }} 
+            a nuestro evento.
+
         </p-fieldset>
     </div>
     <div class="col md-6">
