--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -16,7 +16,9 @@
     </div>
     <div class="col md-6">
         <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-            Content
+            
+           Actualmente {{ clientes.length | i18nPlural:clientesMapa }}.
+
         </p-fieldset>
     </div>
 </div>
