--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -39,4 +39,31 @@
 
         </p-fieldset>
     </div>
+
+    <div class="col md-6">
+        <p-fieldset legend="Slice Pipe" [toggleable]="true">
+            
+            <b>Original</b>
+            <pre>{{ clientes }}</pre>
+
+            <b>slice:0:2</b>
+            <pre>{{ clientes | slice:0:2 }}</pre>
+
+            <b>slice:1:2</b>
+            <pre>{{ clientes | slice:1:2 }}</pre>
+
+            <b>slice:1:3</b>
+            <pre>{{ clientes | slice:1:3 }}</pre>
+
+            <b>slice:3:4</b>
+            <pre>{{ clientes | slice:3:4 }}</pre>
+
+            <b>'Fernando' | slice:0:4</b>
+            <pre>{{ 'Fernando' | slice:0:4 }}</pre>
+
+            <b>nombre | slice:0:4</b>
+            <pre>{{ nombre | slice:0:4 }}</pre>
+
+        </p-fieldset>
+    </div>
 </div>
