--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -5,7 +5,7 @@
 
 <div class="grid">
 
-    <div class="col md-6">
+    <div class="col-6">
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
            <p>
                 Saludos {{ nombre }}, es un placer 
@@ -23,7 +23,7 @@
 
         </p-fieldset>
     </div>
-    <div class="col md-6">
+    <div class="col-6">
         <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
             
             <p>
@@ -68,6 +68,18 @@
     </div>
 
     <div class="col md-6">
+        <p-fieldset legend="Json Pipe" [toggleable]="true">
+
+            <p>Objeto</p>
+            <pre>{{ persona | json }}</pre>
+
+            <p>Arreglo</p>
+            <pre>{{ heroes | json }}</pre>
+
+        </p-fieldset>
+    </div>
+
+    <div class="col md-6">
         <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
             
             <ul>
@@ -78,5 +90,7 @@
 
         </p-fieldset>
     </div>
+
+    
 
 </div>
