--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -40,7 +40,7 @@
         </p-fieldset>
     </div>
 
-    <div class="col md-6">
+    <div class="col-6">
         <p-fieldset legend="Slice Pipe" [toggleable]="true">
             
             <b>Original</b>
@@ -67,7 +67,7 @@
         </p-fieldset>
     </div>
 
-    <div class="col md-6">
+    <div class="col-6">
         <p-fieldset legend="Json Pipe" [toggleable]="true">
 
             <p>Objeto</p>
@@ -79,7 +79,7 @@
         </p-fieldset>
     </div>
 
-    <div class="col md-6">
+    <div class="col-6">
         <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
             
             <ul>
@@ -87,6 +87,17 @@
                    <b>{{ item.key | titlecase }}:</b> {{ item.value  }}
                 </li>
             </ul>
+
+        </p-fieldset>
+    </div>
+
+    <div class="col-6">
+        <p-fieldset legend="Async Pipe" [toggleable]="true">
+           <pre *ngIf="!(miObservable | async)">Resolviendo Obsevable...</pre>
+           <pre>{{ miObservable | async }}</pre>
+
+           <pre *ngIf="!(valorPromesa | async)">Resolviendo Promesa...</pre>
+           <pre>{{ valorPromesa | async }}</pre>
 
         </p-fieldset>
     </div>
